--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,3 +4,6 @@
 @use "blocks/body.scss";
 @use "blocks/titles.scss";
 @use "blocks/texts.scss";
+@use 'blocks/menu.scss';
+@use 'blocks/header.scss';
+@use 'blocks/buttons.scss';
