--- a/src/scss/blocks/texts.scss
+++ b/src/scss/blocks/texts.scss
@@ -1,3 +1,9 @@
 .text {
   font-family: "Karla", sans-serif;
+
+  &__header {
+    color: white;
+    font-size: 16px;
+    line-height: 26px;
+  }
 }
