--- a/src/scss/blocks/texts.scss
+++ b/src/scss/blocks/texts.scss
@@ -6,4 +6,15 @@
     font-size: 16px;
     line-height: 26px;
   }
+
+  &__card {
+    text-align: center;
+    color: #837D88;
+    line-height: 26px;
+    font-size: 16px;
+    font-weight: 500;
+    margin-top: 0;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
 }
