--- a/src/scss/blocks/titles.scss
+++ b/src/scss/blocks/titles.scss
@@ -8,4 +8,23 @@
     font-weight: 500;
     margin-bottom: 0;
   }
+
+  &__cards {
+    color: black;
+    font-size: 48px;
+    line-height: 48px;
+    letter-spacing: -0.67px;
+    font-weight: 500;
+    margin-bottom: 0;
+    text-align: center;
+    margin-top: 140px;
+    margin-bottom: 80px;
+  }
+
+  &__card {
+    font-size: 28px;
+    font-weight: 500;
+    letter-spacing: -0.39px;
+    text-align: center;
+  }
 }
